fix:navbar compress on mobile

--- a/styles/custom-css/admin-dash-messages.css
+++ b/styles/custom-css/admin-dash-messages.css
@@ -258,9 +258,13 @@ button:focus {
     display: none;
   }
 
-  .container-fluid {
+  .main-chat-container {
     padding: 0;
     margin: 0;
+  }
+
+  #inbox-top {
+    background-color: #fff;
   }
 
   #type-msg {
